--- a/nginx.conf
+++ b/nginx.conf
@@ -11,14 +11,14 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-#         location /images/ {
-#             root /images;
-#             try_files $uri =404;
-#         }
-#
-#         location ~* ^/images/.*\.(jpg|jpeg|png|gif)$ {
-#             root /images;
-#         }
+        location /images/ {
+            root /images;
+            try_files $uri =404;
+        }
+
+        location ~* ^/images/.*\.(jpg|jpeg|png|gif)$ {
+            root /images;
+        }
 
         location /upload {
             proxy_pass http://app:8000/upload;
@@ -28,7 +28,13 @@ http {
         }
 
         location /favicon.ico {
-            alias /images/favicon.ico;
+#             alias /images/favicon.ico;
+            root /images;
+            expires -1;
         }
+
+#         location /images/ {
+#             alias /images/;
+#         }
     }
 }
