update dockerignore add all_images.html add all_images.js refactored handler add routing add static volume fix favicon view update index.html update nginx.conf add upload_success.html

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,38 +3,60 @@ events {
 }
 
 http {
+    include mime.types;
+
     server{
+        root /etc/nginx/html;
         listen 80;
+        client_max_body_size 10M;
+
         location / {
+            index /app/static/index.html;
             proxy_pass http://app:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location /images/ {
-            root /images;
-            try_files $uri =404;
+#         location /images/ {
+#             root ./images;
+#             try_files $uri $uri/ =404;
+#         }
+
+#         location /images {
+#             index /static/all_images.html;
+#             root /images;
+#             index ./static/all_images.html;
+#             try_files $uri $uri/ =404;
+#         }
+
+        location /images {
+            root /static;
+            index all_images.html;
+            try_files $uri $uri/ @app;
         }
 
         location ~* ^/images/.*\.(jpg|jpeg|png|gif)$ {
-            root /images;
+            proxy_pass http://app:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
         location /upload {
             proxy_pass http://app:8000/upload;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            client_max_body_size 10M;
         }
 
         location /favicon.ico {
-#             alias /images/favicon.ico;
-            root /images;
+            root /static;
             expires -1;
         }
 
-#         location /images/ {
-#             alias /images/;
-#         }
+        location @app {
+            proxy_pass http://app:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
     }
 }
