--- a/compose.yml
+++ b/compose.yml
@@ -4,6 +4,7 @@ networks:
 volumes:
   images:
   logs:
+  static:
 
 services:
   app:
@@ -14,6 +15,7 @@ services:
     volumes:
       - images:/images
       - logs:/logs
+      - static:/static
     networks:
       - default
 
@@ -25,8 +27,10 @@ services:
       - "80:80"
     volumes:
       - images:/images
+      - ./static:/etc/nginx/html
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./favicon.ico:/images/favicon.ico
+      - ./static/favicon.ico:/static/favicon.ico
+#      - ./favicon.ico:/images/favicon.ico
     networks:
       - default
     depends_on:
