milestone, refactor dict routes, add get_upload, refactor post_upload, refactor nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,41 +1,29 @@
 events {
-        worker_connections 1024;
+    worker_connections 1024;
 }
 
 http {
     include mime.types;
 
-    server{
+    server {
         root /etc/nginx/html;
         listen 80;
         client_max_body_size 10M;
 
         location / {
-            index /app/static/index.html;
+            index index.html;
             proxy_pass http://app:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-#         location /images/ {
-#             root ./images;
-#             try_files $uri $uri/ =404;
-#         }
-
-#         location /images {
-#             index /static/all_images.html;
-#             root /images;
-#             index ./static/all_images.html;
-#             try_files $uri $uri/ =404;
-#         }
-
         location /images {
-            root /static;
+            root /static;  # Указываем, что all_images.html находится в /static
             index all_images.html;
-            try_files $uri $uri/ @app;
+            try_files /all_images.html @app;  # Пробуем обслужить all_images.html
         }
 
-        location ~* ^/images/.*\.(jpg|jpeg|png|gif)$ {
+        location ~* ^/images/.*\.(jpg|jpeg|png|gif)$ {  # Проксируем запросы к изображениям
             proxy_pass http://app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -45,6 +33,7 @@ http {
             proxy_pass http://app:8000/upload;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_read_timeout 90s;
         }
 
         location /favicon.ico {
@@ -57,6 +46,5 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
-
     }
 }
