--- a/nginx.conf
+++ b/nginx.conf
@@ -11,11 +11,12 @@ http {
         client_max_body_size 10M;
 
         location / {
+            root /static;
             index index.html;
             proxy_pass http://app:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-        }
+}
 
         location /images {
             root /static;  # Указываем, что all_images.html находится в /static
@@ -48,3 +49,5 @@ http {
         }
     }
 }
+
+error_log /var/log/nginx/error.log debug;
