big refactor, fix nginx location, change app logic

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,53 +1,106 @@
+# Конфигурация Nginx для сервера хостинга изображений
+#
+# Что делает этот конфиг:
+# 1. Проксирует запросы к Python-серверу
+# 2. Кэширует статические файлы
+# 3. Обрабатывает загрузку больших файлов
+# 4. Настраивает правильные заголовки для CORS
+
 events {
+    # Максимальное количество одновременных соединений
     worker_connections 1024;
 }
 
 http {
+    # Подключаем типы MIME для правильной отдачи файлов
     include mime.types;
+    
+    # Максимальный размер загружаемого файла - 10 мегабайт
+    client_max_body_size 10M;
+    
+    # Настройка апстрима для проксирования к Python-серверу
+    upstream app_server {
+        server app:8000;
+    }
 
     server {
-        root /etc/nginx/html;
+        # Слушаем 80 порт (HTTP)
         listen 80;
-        client_max_body_size 10M;
-
+        
+        # Главная страница и общие настройки
         location / {
-            root /static;
-            index index.html;
-            proxy_pass http://app:8000/;
+            proxy_pass http://app_server;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-}
-
-        location /images {
-            root /static;  # Указываем, что all_images.html находится в /static
-            index all_images.html;
-            try_files /all_images.html @app;  # Пробуем обслужить all_images.html
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location ~* ^/images/.*\.(jpg|jpeg|png|gif)$ {  # Проксируем запросы к изображениям
-            proxy_pass http://app:8000;
+        # Раздача статических файлов (css, js, html)
+        location /static/ {
+            proxy_pass http://app_server;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            expires 1h;  # Кэширование на 1 час
+            add_header Cache-Control "public, no-transform";
+            add_header Access-Control-Allow-Origin *;
+        }
+
+        # HTML страницы для списка изображений и успешной загрузки
+        location ~ ^/(all_images|upload_success)\.html$ {
+            proxy_pass http://app_server;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
+        # Раздача загруженных изображений
+        location /images/ {
+            proxy_pass http://app_server;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            expires 1h;  # Кэширование картинок на 1 час
+            add_header Cache-Control "public, no-transform";
+            add_header Access-Control-Allow-Origin *;
+        }
+
+        # API для получения списка изображений
+        location /api/images {
+            proxy_pass http://app_server/images;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Настройки для загрузки файлов
         location /upload {
-            proxy_pass http://app:8000/upload;
+            proxy_pass http://app_server;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_read_timeout 90s;
+            # Увеличенные таймауты для больших файлов
+            proxy_read_timeout 300;
+            proxy_connect_timeout 300;
+            proxy_send_timeout 300;
+            # Отключаем буферизацию для загрузки
+            proxy_request_buffering off;
+            client_max_body_size 10M;
         }
 
-        location /favicon.ico {
-            root /static;
-            expires -1;
-        }
-
-        location @app {
-            proxy_pass http://app:8000;
+        # Настройки для favicon
+        location = /favicon.ico {
+            proxy_pass http://app_server;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            # Настройки буферизации
+            proxy_buffering on;
+            proxy_buffers 16 4k;
+            proxy_buffer_size 2k;
+            # Максимальное время кэширования
+            expires max;
+            access_log off;
+            add_header Cache-Control "public, immutable, max-age=31536000";
         }
     }
-}
 
-error_log /var/log/nginx/error.log debug;
+    # Логи для отладки
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log;
+}
