Decomposition of functionality, preparation for database connection

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,9 +15,25 @@ http {
     # Подключаем типы MIME для правильной отдачи файлов
     include mime.types;
     
-    # Максимальный размер загружаемого файла - 10 мегабайт
-    client_max_body_size 10M;
+    # Оптимизация производительности
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    keepalive_timeout  65;
+    types_hash_max_size 2048;
+    client_max_body_size 5M;  # Ограничение размера загружаемых файлов
+
+    # Настройки буферизации
+    proxy_buffering on;
+    proxy_buffer_size 4k;
+    proxy_buffers 8 8k;
     
+    # Базовые настройки безопасности
+    server_tokens off;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-XSS-Protection "1; mode=block";
+
     # Настройка апстрима для проксирования к Python-серверу
     upstream app_server {
         server app:8000;
@@ -34,16 +50,24 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Таймауты
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            
+            # Буферизация
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 8k;
         }
 
         # Раздача статических файлов (css, js, html)
         location /static/ {
-            proxy_pass http://app_server;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            alias /app/static/;
             expires 1h;  # Кэширование на 1 час
             add_header Cache-Control "public, no-transform";
-            add_header Access-Control-Allow-Origin *;
+            try_files $uri $uri/ =404;
         }
 
         # HTML страницы для списка изображений и успешной загрузки
@@ -55,17 +79,19 @@ http {
 
         # Раздача загруженных изображений
         location /images/ {
-            proxy_pass http://app_server;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            alias /app/images/;
             expires 1h;  # Кэширование картинок на 1 час
             add_header Cache-Control "public, no-transform";
-            add_header Access-Control-Allow-Origin *;
+            try_files $uri $uri/ =404;
+            
+            # Оптимизация для изображений
+            tcp_nodelay off;
+            keepalive_timeout 15;
         }
 
         # API для получения списка изображений
         location /api/images {
-            proxy_pass http://app_server/images;
+            proxy_pass http://app_server/api/images;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
@@ -86,21 +112,13 @@ http {
 
         # Настройки для favicon
         location = /favicon.ico {
-            proxy_pass http://app_server;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            # Настройки буферизации
-            proxy_buffering on;
-            proxy_buffers 16 4k;
-            proxy_buffer_size 2k;
-            # Максимальное время кэширования
+            alias /app/static/favicon.ico;
             expires max;
-            access_log off;
-            add_header Cache-Control "public, immutable, max-age=31536000";
+            add_header Cache-Control "public, immutable";
         }
-    }
 
-    # Логи для отладки
-    error_log /var/log/nginx/error.log debug;
-    access_log /var/log/nginx/access.log;
+        # Настройки журналирования
+        access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
+        error_log /var/log/nginx/error.log warn;
+    }
 }
