Decomposed the project, updated it requirement.txt , configured db operation, added pagination, added meta information display, added commands for quick script application, updated docstrings, updated readme.md . I tried to bring the project up to the requirements

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
+/data/images/
+/data/logs/
 
 # C extensions
 *.so
@@ -144,4 +146,18 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# PyCharm
+.idea/
+
+# VS Code
+.vscode/
+
+# macOS
+.DS_Store
+
+# Database
+data/db/
+*.sqlite3
+*.sqlite3-journal
 
