--- a/config/docker/Dockerfile
+++ b/config/docker/Dockerfile
@@ -7,10 +7,12 @@ RUN apk add --no-cache \
     gcc \
     musl-dev \
     python3-dev \
-    libmagic
+    libmagic \
+    postgresql-dev
 
 COPY requirements.txt .
 
+# Устанавливаем зависимости
 RUN pip install --no-cache-dir -r requirements.txt
 
 FROM python:3.11-alpine
@@ -20,20 +22,22 @@ WORKDIR /app
 # Установка runtime зависимостей
 RUN apk add --no-cache \
     libmagic \
-    wget
+    wget \
+    postgresql-libs
 
 # Копирование установленных пакетов из builder
 COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
 
 # Копирование файлов приложения
-COPY app.py .
-COPY static/ /app/static/
+COPY app/ /app/app/
+COPY config/ /app/config/
+COPY requirements.txt /app/
 
 # Создание непривилегированного пользователя
 RUN adduser -D appuser
 
 # Создание необходимых директорий и настройка прав
-RUN mkdir -p /app/images /app/logs && \
+RUN mkdir -p /app/images /app/logs /app/static && \
     chown -R appuser:appuser /app && \
     chmod -R 755 /app
 
@@ -44,4 +48,6 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=3s \
     CMD wget --no-verbose --tries=1 --spider http://localhost:8000/ || exit 1
 
-CMD ["python", "app.py"]
+ENV PYTHONPATH=/app
+
+CMD ["python", "-m", "app.app"]
