--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ setuptools==75.8.0
 wheel==0.45.1
 python-magic==0.4.27
 aiohttp==3.9.3
+psycopg2-binary==2.9.9
+asyncpg==0.29.0
+python-dotenv==1.0.0
